# Claude-Tab

./: .gitignore  AGENTS.md  AGENT_TEAMS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
config/: default.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  event_bus.rs  hook_listener.rs  lib.rs  plugin_host.rs  profile.rs  session.rs  state_machine.rs  title.rs
crates/core/src/events/: mod.rs  topics.rs
crates/core/src/traits/: archiver.rs  buffer.rs  channel.rs  detector.rs  extension.rs  factory.rs  mod.rs  output.rs  provider.rs  reaction.rs
crates/extensions/auto-switch/: Cargo.toml
crates/extensions/auto-switch/src/: lib.rs
crates/extensions/claude-hooks/: Cargo.toml
crates/extensions/claude-hooks/src/: lib.rs
crates/extensions/directory-tracker/: Cargo.toml
crates/extensions/directory-tracker/src/: lib.rs
crates/extensions/file-watcher/: Cargo.toml
crates/extensions/file-watcher/src/: lib.rs
crates/extensions/output-parser/: Cargo.toml
crates/extensions/output-parser/src/: lib.rs
crates/extensions/system-notify/: Cargo.toml
crates/extensions/system-notify/src/: lib.rs
crates/platform-focus/: Cargo.toml
crates/platform-focus/src/: lib.rs  macos.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs  manager.rs  output_stream.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  migrations.rs  models.rs  reader.rs  scanner.rs  sqlite.rs  traits.rs
crates/tauri-bridge/: Cargo.toml
crates/tauri-bridge/src/: commands.rs  ipc.rs  lib.rs
docs/: commercialization-analysis.md  tools-and-services.md
scripts/: release.sh
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: claude-tabs-hook.sh  shell-integration.bash  shell-integration.zsh
src-tauri/src/: lib.rs  main.rs
src/extensions/command-palette/: index.tsx
src/extensions/countdown-timer/: index.tsx
src/extensions/inactivity-switch/: InactivityToast.tsx  index.tsx
src/extensions/policy-badge/: index.tsx
src/extensions/profile-launcher/: index.tsx
src/extensions/profiles/: InputField.tsx  ProfileEditor.tsx  ProfilesPanel.tsx  SystemPromptPicker.tsx  index.tsx
src/extensions/settings/: SettingsPanel.tsx  index.tsx
src/extensions/status-bar/: index.tsx
src/extensions/tab-bar/: HistorySection.tsx  SearchBar.tsx  index.tsx  types.ts
src/extensions/terminal-panel/: UnifiedTerminal.tsx  index.tsx
src/extensions/window-focus/: index.ts
src/kernel/: ComponentRegistry.ts  ConfigProvider.tsx  EventBus.ts  EventBusContext.tsx  ExtensionHost.ts  FocusContext.tsx  FocusManager.ts  KeybindingManager.ts  KeybindingManagerContext.tsx  SessionStateContext.tsx  SessionStateManager.ts  StateStore.ts  index.ts
src/sdk/: createExtension.ts  index.ts  useEvent.ts  useSession.ts
src/services/: TauriBackendService.ts  TauriEventListener.ts  index.ts  types.ts
src/shell/: App.tsx  ErrorBoundary.tsx  SlotRenderer.tsx
src/types/: config.ts  events.ts  extension.ts  kernel.ts  profile.ts  session.ts  slots.ts
website/: .gitignore  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/components/: CopyButton.tsx
website/public/: robots.txt  sitemap.xml
