[workspace]
members = [
    "crates/core",
    "crates/pty",
    "crates/storage",
    "crates/tauri-bridge",
    "crates/platform-focus",
    "crates/extensions/claude-hooks",
    "crates/extensions/output-parser",
    "crates/extensions/auto-switch",
    "crates/extensions/system-notify",
    "crates/extensions/file-watcher",
    "crates/extensions/directory-tracker",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "2", features = [] }
tauri-build = "2"
