[package]
name = "claude-tabs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-tabs-storage = { path = "../storage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
libc = "0.2"
parking_lot = "0.12"
