[package]
name = "claude-tabs-pty"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-tabs-core = { path = "../core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
portable-pty = { workspace = true }
parking_lot = "0.12"
bytes = "1"
