[package]
name = "claude-tabs-tauri-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-tabs-core = { path = "../core" }
claude-tabs-pty = { path = "../pty" }
claude-tabs-storage = { path = "../storage" }
claude-tabs-platform-focus = { path = "../platform-focus" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tauri = { workspace = true }
base64 = "0.22"
