[package]
name = "claude-tabs-ext-directory-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-tabs-core = { path = "../../core" }
claude-tabs-pty = { path = "../../pty" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
